--- a/07-custom-component/package.json
+++ b/07-custom-component/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "type": "module",
-  "name": "custom-component",
-  "description": "리액트 커스텀 컴포넌트 제작 실습",
+  "name": "react-build-environment",
+  "description": "리액트 빌드 환경을 매뉴얼 구성합니다.",
   "version": "1.0.0",
   "scripts": {
     "dev": "bun index.html",
