--- a/08-react-vite/jsconfig.json
+++ b/08-react-vite/jsconfig.json
@@ -4,7 +4,8 @@
     "checkJs": true,
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
