refactor: 상태가 없는 컴포넌트

--- a/09-stateless-component/.vscode/settings.json
+++ b/09-stateless-component/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  
   "search.exclude": {
     "**/coverage": true,
     "**/node_modules": true
@@ -16,12 +15,5 @@
   "javascript.inlayHints.propertyDeclarationTypes.enabled": true,
   "javascript.inlayHints.variableTypes.enabled": true,
   "javascript.suggest.autoImports": true,
-  "javascript.suggest.paths": false,
-
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": "explicit",
-    "source.fixAll.eslint": "explicit",
-    "source.removeUnused": "explicit"
-  },
-
+  "javascript.suggest.paths": false
 }
