refactor: 학습 폴더 및 실습 예제 통합

--- a/11-lifting-state-up/.prettierrc
+++ b/11-lifting-state-up/.prettierrc
@@ -17,7 +17,11 @@
     "^react",
     "^[a-zA-Z]",
     "^@/(.*)$",
-    "^\\.[^.]*(?<!\\.css)$",
+    "^\\.\\./(.*)$",
+    "^\\.\\./(.*)/(.*)$",
+    "^\\./(.*)$",
+    "\\.(json|jsx)$",
+    "\\.(png|jpe?g|gif|svg|webp|avif)$",
     "\\.css$"
   ],
   "importOrderSeparation": false,
