--- a/13-manage-array-state/package.json
+++ b/13-manage-array-state/package.json
@@ -33,11 +33,13 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "immer": "^10.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.12",
     "terser": "^5.43.1",
+    "use-immer": "^0.11.0",
     "vite": "^7.1.2",
     "vite-plugin-compression": "^0.5.1"
   },
