learn: 타입스크립트 마이그레이션 1
- 타입 안정성
- 타입 지정 및 단언
- 컴포넌트 속성 타입 지정
- ComponentProps
- useState 훅 타입 지정

--- a/27-dom-ref/package.json
+++ b/27-dom-ref/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "type": "module",
-  "name": "hello-typescript",
+  "name": "27-dom-ref",
   "description": "리액트 템플릿 (Bun + Vite + TypeScript)",
   "version": "1.2.0",
   "scripts": {
@@ -31,7 +31,7 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.4",
@@ -47,7 +47,7 @@
     "tailwindcss": "^4.1.12",
     "terser": "^5.43.1",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0",
+    "typescript-eslint": "^8.41.0",
     "vite": "^7.1.3",
     "vite-plugin-compression": "^0.5.1"
   },
