learn: 외부 라이브러리와 리액트 앱 연동 2
- ref 속성 + 콜백(callback) 함수 설정 방법
- ref 속성 + useRef 훅 + useEffect 훅 연결하는 방법

--- a/27-dom-ref/package.json
+++ b/27-dom-ref/package.json
@@ -20,7 +20,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
-    "use-immer": "^0.11.0"
+    "use-immer": "^0.11.0",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
