--- a/27-dom-ref/package.json
+++ b/27-dom-ref/package.json
@@ -15,7 +15,9 @@
     "clean": "rimraf -rf dist"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "canvas-confetti": "^1.9.3",
+    "gsap": "^3.13.0",
     "immer": "^10.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
